# datashare-extension-neo4j-demos

./: .gitignore  README.md  docker-compose-bloom.yml  docker-compose-enterprise.yml  docker-compose.yml  pyproject.toml
demos/: entity_resolution_with_oldb_and_openrefine.ipynb  exploring_the_enron_email_corpus_with_bloom_and_graph_data_science.ipynb  reconcilation_with_oldb_and_openrefine.ipynb
